@@ -1,5 +1,8 @@
 2008-04-07  Jeff Hobbs  <jeffh@ActiveState.com>
 
+	* generic/tkWindow.c (Initialize): fix double-free on Tk_ParseArgv
+	* tests/main.test (main-3.*):      error. [Bug 1937135]
+
 	* generic/tkArgv.c: fix -help mem explosion. [Bug 1936238] (kenny)
 
 2008-04-04  Pat Thoyts  <patthoyts@users.sourceforge.net>
